HSEARCH-4931 Don't use bytebuddy's experimental flag for JDK 21 tests
Because we're now using bytebuddy 1.14.7