@@ -1460,11 +1460,7 @@
                 </property>
             </activation>
             <properties>
-                <!-- We need net.bytebuddy.experimental=true to make BytecodeEnhancementIT and mockito-based tests pass -->
-                <surefire.jvm.args.java-version>
-                    -Djdk.attach.allowAttachSelf=true
-                    -Dnet.bytebuddy.experimental=true
-                </surefire.jvm.args.java-version>
+                <!-- impsort-maven-plugin doesn't work with JDK20 yet? -->
                 <format.skip>true</format.skip>
             </properties>
         </profile>
@@ -1478,11 +1474,6 @@
                 </property>
             </activation>
             <properties>
-                <!-- We need net.bytebuddy.experimental=true to make BytecodeEnhancementIT and mockito-based tests pass -->
-                <surefire.jvm.args.java-version>
-                    -Djdk.attach.allowAttachSelf=true
-                    -Dnet.bytebuddy.experimental=true
-                </surefire.jvm.args.java-version>
                 <!-- impsort-maven-plugin doesn't work with JDK21 yet -->
                 <format.skip>true</format.skip>
             </properties>
